force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>OBS Integration Log</label>
    <nameField>
        <displayFormat>Integration_Log-{000000}</displayFormat>
        <label>OBS Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OBS Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>