force-app/main/default/objects/Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField><fullName>Endpoint__c</fullName><label>Endpoint</label><length>255</length><type>Text</type></CustomField>