force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField><fullName>Error_Message__c</fullName><label>Error Message</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>