force-app/main/default/objects/Integration_Log__c/fields/Response_Time_ms__c.field-meta.xml
<CustomField><fullName>Response_Time_ms__c</fullName><label>Response Time ms</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>