force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><value><fullName>Success</fullName><default>true</default></value><value><fullName>Failed</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>