force-app/main/default/objects/Integration_Log__c/fields/System_Name__c.field-meta.xml
<CustomField><fullName>System_Name__c</fullName><label>OBS System Name</label><length>255</length><type>Text</type></CustomField>